# chip-8-emu

./: .gitignore  CMakeLists.txt  README.md  chip8.sln
EmuGui/: Form1.Designer.cs  Form1.cs  Program.cs
EmuGui/Properties/: Resources.Designer.cs
chip8/: EmuWindow.cpp  EmuWindow.h  IDisplay.h  Util.h  chip8-gnu.cbp  chip8.cpp  chip8.h  chip8.vcxproj  main.cpp
doc/: specification.url
